--- a/index.html
+++ b/index.html
@@ -171,8 +171,9 @@
               Twice
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original-wordmark.svg" width="20px" height="20px" />
             </a>
-            <a data-aos="zoom-in" data-aos-duration="2000" href="#" class="font-sm btn shadow-sm mr-2 mb-1">
-              Coming soon
+            <a data-aos="zoom-in" data-aos-duration="2000" href="https://dimstry.github.io/Reveluv/" target="_blank" class="font-sm btn shadow-sm mr-2 mb-1">
+              Reveluv
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" width="20px" height="20px" />
             </a>
             <a data-aos="zoom-in" data-aos-duration="2000" href="#" class="font-sm btn shadow-sm mr-2 mb-1">
               Coming soon
