--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
     </section>
   </div>
 
-  <section id="Portofolio" class="container-fluid">
-    <h2 data-aos="fade-up" data-aos-duration="1500" class="text-right font-weight-bold text-primary mb-5 mt-2"><ins>Portofolio</ins></h2>
-    <div class="d-flex justify-content-center">
+  <section id="Portofolio" class="container-fluid mb-5">
+    <h2 data-aos="fade-up" data-aos-duration="1500" class="text-right font-weight-bold text-primary mb-3 mt-2"><ins>Portofolio</ins></h2>
+    <div data-aos="zoom-in" data-aos-duration="2000" class="d-flex justify-content-center">
       <!-- Swiper -->
       <div class="swiper mySwiper">
         <!-- Swiper list awal-->
@@ -254,70 +254,68 @@
     </div>
   </section>
 
-  <section id="Contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-sm-12 mt-4">
-          <h4 class="text-center font-weight-bold text-primary ">Find Me On</h4>
-          <div class="mb-2 mt-2 d-flex flex-row-reverse">
-            <a href="https://instagram.com/dims_yny?igshid=YmMyMTA2M2Y=" target="_blank" class="btn btn__trans mr-2 mb-1 rounded-circle">
-              <i class='bx bxl-instagram bx-md text-primary'></i>
-            </a>
-            <i class="mt-2 p-2">Instagram</i>
-          </div>
-          <div class="mb-2 mt-2">
-            <a href="https://github.com/dimstry" target="_blank" class="btn btn__trans mr-2 mb-1 rounded-circle">
-              <i class='bx bxl-github bx-md text-primary'></i>
-            </a>
-            <i>Github</i>
-          </div>
-          <div class="mb-2 mt-2 d-flex flex-row-reverse">
-            <a href="mailto: dimastriana03@gmail.com" target="_blank" class="btn btn__trans  mr-2 mb-1 rounded-circle">
-              <i class='bx bxl-gmail bx-md text-primary'></i>
-            </a>
-            <i class="mt-2 p-2">Gmail</i>
-          </div>
-          <div class="mb-2 mt-2">
-            <a href="https://www.facebook.com/profile.php?id=100032103882689" target="_blank" class="btn btn__trans mr-2 mb-1 rounded-circle">
-              <i class='bx bxl-facebook bx-md text-primary'></i>
-            </a>
-            <i>Facebook</i>
-          </div>
+  <section id="Contact" class="container-fluid mt-4">
+    <div data-aos="fade-up" data-aos-duration="1500" class="row mt-4">
+      <div class="col-md-6 col-sm-12 mt-3">
+        <h4 class="font-weight-bold text-primary">Find Me On</h4>
+        <div class="mb-2 mt-2 d-flex flex-row-reverse">
+          <a href="https://instagram.com/dims_yny?igshid=YmMyMTA2M2Y=" target="_blank" class="btn btn__trans mr-2 mb-1">
+            <i class='bx bxl-instagram bx-md text-primary'></i>
+          </a>
+          <i class="mt-1 p-2">Instagram</i>
         </div>
-        <div class="col-md-6 col-sm-12">
-          <div class="col-md-12 mx-auto mt-4">
-            <h2 class="font-weight-bold text-primary mb-4"><ins>Contact</ins></h2>
-            <div class="alert alert-success alert-dismissible fade show my-alert d-none" role="alert">
-              <strong>Thanks You</strong> 당신의 메시지가 전송되었습니다
-              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <form name="submit-to-google-sheet" autocomplete="off">
-              <div class="form-group mt-5">
-                <label for="nama">Name</label>
-                <input type="text" class="form-control" id="nama" placeholder="your name" name="nama">
-              </div>
-              <div class="form-group">
-                <label for="emailid">Email </label>
-                <input id="emailid" type="email" class="form-control" placeholder="yourname@example.com" name="email">
-              </div>
-              <div class="form-group">
-                <label for="pesan">Message</label>
-                <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
-              </div>
-              <button type="submit" class="btn btn-kirim bg-primary text-white">Send</button>
-              <button class="btn bg-primary text-white btn-loading d-none" type="button">
-                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                Loading...
-              </button>
-            </form>
+        <div class="mb-2 mt-2">
+          <a href="https://github.com/dimstry" target="_blank" class="btn btn__trans mr-2 mb-1">
+            <i class='bx bxl-github bx-md text-primary'></i>
+          </a>
+          <i>Github</i>
+        </div>
+        <div class="mb-2 mt-2 d-flex flex-row-reverse">
+          <a href="mailto: dimastriana03@gmail.com" target="_blank" class="btn btn__trans  mr-2 mb-1">
+            <i class='bx bxl-gmail bx-md text-primary'></i>
+          </a>
+          <i class="mt-1 p-2">Gmail</i>
+        </div>
+        <div class="mb-2 mt-2">
+          <a href="https://www.facebook.com/profile.php?id=100032103882689" target="_blank" class="btn btn-sm btn__trans mr-2 mb-1">
+            <i class='bx bxl-facebook bx-md text-primary'></i>
+          </a>
+          <i>Facebook</i>
+        </div>
+      </div>
+      <div class="col-md-6 col-sm-12">
+        <div class="mb-2">
+          <h2 class="text-right font-weight-bold text-primary mb-4"><ins>Contact</ins></h2>
+          <div class="alert alert-success alert-dismissible fade show my-alert d-none" role="alert">
+            <strong>Thanks You</strong> 당신의 메시지가 전송되었습니다
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
           </div>
+          <form name="submit-to-google-sheet" autocomplete="off">
+            <div class="form-group mt-5">
+              <label for="nama">Name</label>
+              <input type="text" class="form-control" id="nama" placeholder="your name" name="nama">
+            </div>
+            <div class="form-group">
+              <label for="emailid">Email </label>
+              <input id="emailid" type="email" class="form-control" placeholder="yourname@example.com" name="email">
+            </div>
+            <div class="form-group">
+              <label for="pesan">Message</label>
+              <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
+            </div>
+            <button type="submit" class="btn btn-kirim bg-primary text-white">Send</button>
+            <button class="btn bg-primary text-white btn-loading d-none" type="button">
+              <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+              Loading...
+            </button>
+          </form>
         </div>
       </div>
     </div>
   </section>
-  
+
   <div class="container mb-4">
     <footer style="margin-top: 100px;">
       <div class="text-center">
