--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                   This website is just a fad when I learn to rest api
                 </div>
                 <a href="https://dimstry.github.io/Reveluv/" target="_blank" class="font-sm btn shadow-sm mr-2 mb-1">
-                  Reveluv
+                  Demo
                   <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" width="20px" height="20px" />
                 </a>
               </div>
