--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       <div class="col-md-6 col-sm-12 mt-3">
         <h4 class="font-weight-bold text-primary">Find Me On</h4>
         <div class="mb-2 mt-2 d-flex flex-row-reverse">
-          <a href="https://instagram.com/dims_yny?igshid=YmMyMTA2M2Y=" target="_blank" class="btn btn__trans mr-2 mb-1">
+          <a href="https://instagram.com/dimstr__?igshid=YmMyMTA2M2Y=" target="_blank" class="btn btn__trans mr-2 mb-1">
             <i class='bx bxl-instagram bx-md text-primary'></i>
           </a>
           <i class="mt-1 p-2">Instagram</i>
