--- a/index.html
+++ b/index.html
@@ -305,10 +305,10 @@
               <label for="pesan">Message</label>
               <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
             </div>
-            <button type="submit" class="btn btn-kirim bg-primary text-white">Send</button>
+            <button type="submit" class="btn btn-kirim bg-primary text-white yolo">Send</button>
             <button class="btn bg-primary text-white btn-loading d-none" type="button">
-              <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-              Loading...
+              <i class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></i>
+              <span>Loading...</span>
             </button>
           </form>
         </div>
