--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
               <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
             </div>
             <button type="submit" class="btn btn-kirim bg-primary text-white yolo">Send</button>
-            <button class="btn bg-primary text-white btn-loading d-none" type="button">
+            <button class="btn bg-primary text-white btn-loading d-none yolo" type="button">
               <i class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></i>
               <span>Loading...</span>
             </button>
