update link Twice

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <div class="info__porto">
                   this website contains Twice member information,
                 </div>
-                <a href="https://dimstry.github.io/about-twice/" target="_blank" class="font-sm btn shadow-sm mr-2 mb-1">
+                <a href="https://dimstry.github.io/MyTwice/" target="_blank" class="font-sm btn shadow-sm mr-2 mb-1">
                   Demo
                   <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original-wordmark.svg" width="20px" height="20px" />
                 </a>
