--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
       </div>
     </div>
-
+    <!-- hoby -->
     <section id="Hobby" class="mb-4">
       <div class="row">
         <div class="col-sm-12 col-md-6">
@@ -295,15 +295,15 @@
           <form name="submit-to-google-sheet" autocomplete="off">
             <div class="form-group mt-5">
               <label for="nama">Name</label>
-              <input type="text" class="form-control" id="nama" placeholder="your name" name="nama">
+              <input type="text" class="form-control" id="nama" placeholder="your name" name="nama" required>
             </div>
             <div class="form-group">
               <label for="emailid">Email </label>
-              <input id="emailid" type="email" class="form-control" placeholder="yourname@example.com" name="email">
+              <input id="emailid" type="email" class="form-control" placeholder="yourname@example.com" name="email" required>
             </div>
             <div class="form-group">
               <label for="pesan">Message</label>
-              <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
+              <textarea class="form-control" id="pesan" rows="3" name="pesan" required></textarea>
             </div>
             <button type="submit" class="btn btn-kirim bg-primary text-white yolo">Send</button>
             <button class="btn bg-primary text-white btn-loading d-none yolo" type="button">
