--- a/index.html
+++ b/index.html
@@ -239,6 +239,24 @@
               </div>
             </div>
           </div>
+          <!-- Al Qur'an On -->
+          <div class="swiper-slide">
+            <div class="my__projek">
+              <img src="./assets/img/projek/6.jpg" alt="" class="img__swipe">
+              <div class="p_right">
+                <div class="judul__porto">
+                  Al-Qur'an online
+                </div>
+                <div class="info__porto">
+                  An online Al-Quran website created with the help of Rest api
+                </div>
+                <a href="https://dimstry.github.io/Al-Qur-anOn/" target="_blank" class="font-sm btn shadow-sm mr-2 mb-1">
+                  Demo
+                  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" width="20px" height="20px" />
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
         <!-- Swiper list akhir-->
         <!-- Button dan navigation swiper js -->
