--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                   Aespa
                 </div>
                 <div class="info__porto">
-                  This website was created to promote Korean girl groups,made with bootstrap
+                  This website was created to promote girl groups,made with bootstrap
                 </div>
                 <a href="https://dimstry.github.io/aespa-page/" target="_blank" class="font-sm btn shadow-sm mr-2 mb-1">
                   Demo
