padding for skill

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="col-sm-12 col-md-6">
           <section id="Technologies" class="scrol">
             <h2 data-aos="fade-up" data-aos-duration="1500" class="font-weight-bold text-primary mb-4"><ins>Technologies</ins></h2>
-            <div class="mb-3 mt-4">
+            <div class="mb-3 mt-4 p-3">
               <a data-aos="fade-up" data-aos-duration="500" class="btn mr-2 mb-1 mt-4 shadow-sm">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" width="35px" height="35px" />
               </a>
