--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     DimsFilms
                   </div>
                   <div class="info__porto">
-                    this website is made with React JS and React bootstrap for style
+                    this website is made with React JS
                   </div>
                   <a href="https://dimstry.github.io/DimsFilms/" target="_blank" class="font-sm btn shadow-sm mr-2 mb-1">
                     Demo
@@ -177,7 +177,7 @@
                     Aespa
                   </div>
                   <div class="info__porto">
-                    This website was created to promote girl groups,made with bootstrap
+                    This website was created to promote girl groups
                   </div>
                   <a href="https://dimstry.github.io/aespa-page/" target="_blank" class="font-sm btn shadow-sm mr-2 mb-1">
                     Demo
@@ -195,7 +195,7 @@
                     MyIdol
                   </div>
                   <div class="info__porto">
-                    This is a K-Pop Idol Web Profile created using the Next.js framework
+                    A K-Pop Idol Web Profile created using the Next.js
                   </div>
                   <a href="https://my-idol.vercel.app/" target="_blank" class="font-sm btn shadow-sm mr-2 mb-1">
                     Demo
@@ -231,7 +231,7 @@
                     Reveluv
                   </div>
                   <div class="info__porto">
-                    This website is just a fad when I learn to rest api
+                    Website is just a fad when I learn to rest api
                   </div>
                   <a href="https://dimstry.github.io/Reveluv/" target="_blank" class="font-sm btn shadow-sm mr-2 mb-1">
                     Demo
@@ -249,7 +249,7 @@
                     Al-Qur'an online
                   </div>
                   <div class="info__porto">
-                    An online Al-Quran website created with the help of Rest api
+                    Online Al-Quran website created with the help of Rest api
                   </div>
                   <a href="https://dimstry.github.io/Al-Qur-anOn/" target="_blank" class="font-sm btn shadow-sm mr-2 mb-1">
                     Demo
