--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     DimsFilms
                   </div>
                   <div class="info__porto">
-                    this website is made with React JS
+                    This website is made with React JS and React boostrap for style
                   </div>
                   <a href="https://dimstry.github.io/DimsFilms/" target="_blank" class="font-sm btn shadow-sm mr-2 mb-1">
                     Demo
